--- a/RL-LAB2.ipynb
+++ b/RL-LAB2.ipynb
@@ -11,7 +11,7 @@
         "Laboratorio 2  \n",
         "Marlon Hernández - 15177  \n",
         "\n",
-        "- Link del repositorio: "
+        "- Link del repositorio: https://github.com/ivanhez/RL-LAB2"
       ]
     },
     {
